# HW12

./: .env  config.py  main.py  pyproject.toml  requirements.txt  schemas.py
database/: models.py
routes/: auth.py  contacts.py
